html formatting test

--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-Hello World
-this is another test of my html abilities
-
-try2
+<p> i am <em>beginning</em> to become more <strong> comfortable </strong> with html </p>
+<p>this is a new paragraph</p>
