--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p> i am <em>beginning</em> to become more <strong> comfortable </strong> with html </p>
 <p>this is a new paragraph</p>
 <p>this next image is quite pog</p>
-<img, src="https://qph.fs.quoracdn.net/main-qimg-162e707e3516564336d1d658f50676e4">
+<img src="C:\Users\Matthew McGoldrick\Documents\2-personal\website test\McGoldrick11.github.io\poggers.jpg">
