--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p> i am <em>beginning</em> to become more <strong> comfortable </strong> with html </p>
 <p>this is a new paragraph</p>
 <p>this next image is quite pog</p>
-<img src="McGoldrick11.github.io/poggers.jpg">
+<img src="McGoldrick11.github.io/poggers.jpg" alt="dude doing pogface">
