--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<p> i am <em>beginning</em> to become more <strong> comfortable </strong> with html </p>
-<p>this is a new paragraph</p>
-<p>this next image is quite pog</p>
-<img src="McGoldrick11.github.io/poggers.jpg" alt="dude doing pogface">
-<p> here is a hyperlink:<a
-    href="https://www.youtube.com/watch?v=oHg5SJYRHA0"
-    title="its probably what youre thinking"
-    > Surprise ;) </a>.</p>
-    
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Matt's Website</title>
+    </head>
+    <body>
+        <p> <h1>Welcome to my site! this is where I am practicing my webbuilding. right now I am focusing on learning html formatting</h1></p>
+        <p> I am <em>beginning</em> to become more <strong> comfortable </strong> with html </p>
+        <p>this next image is quite pog</p>
+        <img src="McGoldrick11.github.io/poggers.jpg" alt="dude doing pogface">
+        <p> here is a hyperlink:<a
+            href="https://www.youtube.com/watch?v=oHg5SJYRHA0"
+            title="its probably what youre thinking"
+            > Surprise ;) </a>.</p>
+
+        <p> Go ahead, type something nice: <input type="text">
+    </body>
+</html>
