--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             > Surprise ;) </a>.</p>
 
         <p> Go ahead, type something nice: <input type="text">
+
+        <li class = "button">
+                <button type="button">DONT CLICK THE BUTTON</button>
+            </li>
     </body>
 </html>
