--- a/crewmates.html
+++ b/crewmates.html
@@ -1,1 +1,44 @@
-test123
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>local test</title>
+        <style>
+        form {
+            margin:0 auto;
+            width: 500px;
+            padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+        }
+        </style>
+    </head>
+
+    <body>
+        hello
+    </body>
+
+    <form action="/my-handling-form-page" method="post">
+        <ul>
+            <li>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name">
+            </li>
+
+            <li>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_email">
+            </li>
+
+            <li>
+                <label for="msg">Message:</label>
+                <textarea id="msg" name="user_message"></textarea>
+            </li>
+
+            <li class = "button">
+                <button type="submit">Send dat hoe</button>
+            </li>
+
+        </ul>
+    </form>
+</html>
