--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <li class = "button">
                 <button type="button">DONT CLICK THE BUTTON</button>
             </li>
+
+        <p> <a href="https://mcgoldrick11.github.io/crewmates.html">Crewmate Order Form</a></p>
+        <!--creates a hyperlink to another page in this project where i am hosting the crewmate order form-->
     </body>
 </html>
