--- a/crewmates.html
+++ b/crewmates.html
@@ -84,8 +84,8 @@
             </li>
 
             <li>
-                <label for="mail">E-mail:</label>
-                <input type="email" id="mail" name="user_email">
+                <label for="phn">Phone Number:</label>
+                <input type="tel" id="phn" name="user_phn">
             </li>
 
             <li>
@@ -93,25 +93,14 @@
                 <textarea id="msg" name="user_message"></textarea>
             </li>
 
-            
-
             <li>
-            <label for="Colors">Choose Your Color:</label>
-            <select id="colors" name="colors">
-                <option value="null">Please Select a Color</option>
-                <option value="Red">Red</option>
-                <option value="Green">Green</option>
-                <option value="Blue">Blue</option>
-            </select>
-            </li>
-
-            <li>
-            <p>Please Select a Color</p>      
+            <p>Please Select a Color</p>   
             <input list ="colors1">
             
             <datalist id="colors1">
                 <option value="Purple">
                 <option value="White">
+            </li>
 
             <li class = "button">
                 <button type="submit">Submit Order</button>
